--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,7 @@
 [manager]
-manager ansible_host=13.235.59.170 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+manager ansible_host=3.6.93.144 ansible_user=root
+manager ansible_swarm_private-ip_host=172.31.44.157
 
 [workers]
-worker1 ansible_host=13.235.60.101 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
-worker2 ansible_host=13.235.60.102 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+worker1 ansible_host=13.201.19.60 ansible_user=root
+#worker2 ansible_host=13.235.60.102 ansible_user=root
